hphp/hack/test/typecheck/meth_caller/nameof_trait.php
<?hh

trait MyTrait {
  public function foo(): void {}
}

function test(): void {
  meth_caller(nameof MyTrait, 'foo');
}
